--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,59 @@
 alabaster==0.7.12
 Babel==2.9.0
+backcall==0.2.0
+bcrypt==3.2.0
 certifi==2020.12.5
+cffi==1.14.4
 chardet==4.0.0
+ciscoconfparse==1.5.29
 colorama==0.4.4
 commonmark==0.9.1
+cryptography==3.3.1
+decorator==4.4.2
+dnspython==2.1.0
 docutils==0.16
+future==0.18.2
 idna==2.10
 imagesize==1.2.0
+ipython==7.20.0
+ipython-genutils==0.2.0
+jedi==0.18.0
 Jinja2==2.11.2
+junos-eznc==2.5.4
+lxml==4.6.2
 MarkupSafe==1.1.1
+napalm==3.2.0
+ncclient==0.6.9
+netaddr==0.8.0
+netmiko==3.3.2
 nmap==0.0.1
+ntc-templates==1.6.0
 packaging==20.8
-pkg-resources==0.0.0
+paramiko==2.7.2
+parso==0.8.1
+passlib==1.7.4
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.16
+ptyprocess==0.7.0
+py==1.10.0
+pycparser==2.20
+pyeapi==0.8.4
 Pygments==2.7.3
+PyNaCl==1.4.0
 pyparsing==2.4.7
+pyserial==3.5
+pyshark==0.4.3
+python-nmap==0.6.4
 python3-nmap==1.4.9
 pytz==2020.5
+PyYAML==5.4.1
 requests==2.25.1
 rich==9.6.1
+scapy==2.4.4
+scp==0.13.3
 simplejson==3.17.2
+six==1.15.0
 snowballstemmer==2.0.0
 Sphinx==3.4.2
 sphinx-rtd-theme==0.5.1
@@ -30,5 +65,12 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 synologydsm-api==1.0.1
 tabulate==0.8.7
+tenacity==6.3.1
+textfsm==1.1.0
+traitlets==5.0.5
+transitions==0.8.6
 typing-extensions==3.7.4.3
 urllib3==1.26.2
+wcwidth==0.2.5
+xmltodict==0.12.0
+yamlordereddictloader==0.4.0
