--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,20 @@ certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
 ciscoconfparse==1.5.29
+click==7.1.2
 colorama==0.4.4
 commonmark==0.9.1
 cryptography==3.3.1
 decorator==4.4.2
 dnspython==2.1.0
 docutils==0.16
+Flask==1.1.2
 future==0.18.2
 idna==2.10
 imagesize==1.2.0
 ipython==7.20.0
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.2
 junos-eznc==2.5.4
@@ -28,6 +31,7 @@ netaddr==0.8.0
 netmiko==3.3.2
 nmap==0.0.1
 ntc-templates==1.6.0
+ntplib==0.3.4
 packaging==20.8
 paramiko==2.7.2
 parso==0.8.1
@@ -72,5 +76,6 @@ transitions==0.8.6
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 wcwidth==0.2.5
+Werkzeug==1.0.1
 xmltodict==0.12.0
 yamlordereddictloader==0.4.0
